update v1.2.1.19 rnd_saying fixed att-page alignCenter

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 ﻿/*!
     Theme Name:	Germ
-    Version: 1.2.0.18
+    Version: 1.2.1.19
     Theme URI: https://hzy.pw/p/1933
     Description: An exquisite theme for you. Used PJAX and many advanced features. Besides, it looks well.
     Tags: Blue,Light,Responsive Layout,Two Columns,Right Sidebar,Theme Options,Custom Menu,Post Formats,Threaded Comments
@@ -705,6 +705,10 @@ article.sticky h2.entry-name::before {
 .entry-content ol li {
     list-style-type: decimal;
     margin-left: 2rem;
+}
+
+.entry-content.att-page {
+    text-align: center;
 }
 
 /*文章内分页*/
